--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,4 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>TestNG_GroupingAndDependency.test4()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]<br/></td></tr>
-<tr><td>smoke</td><td>TestNG_GroupingAndDependency.test1()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]<br/>TestNG_GroupingAndDependency.test2()[pri:0, instance:tests.TestNG_GroupingAndDependency@36f48b4]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
