--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">19,487</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">15,665</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">tests.RegistrationFormTest</td><td><a href="#m0">registrationFormTest</a></td><td rowspan="2">1694833326231</td><td rowspan="2">4323</td></tr><tr class="passedeven"><td><a href="#m1">registrationFormTest</a></td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">tests.RegistrationFormTest</td><td><a href="#m0">registrationFormTest</a></td><td rowspan="1">1695087527811</td><td rowspan="1">5400</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">tests.RegistrationFormTest#registrationFormTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th></tr><tr class="param stripe"><td>hamid</td><td>Saremq</td><td>hamid@gmail.comq</td><td>3.4444444444E10</td><td>123test3</td><td>123test3</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">tests.RegistrationFormTest#registrationFormTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th></tr><tr class="param stripe"><td>Jawidq</td><td>Ashooryq</td><td>jawid@hotmail.comeq</td><td>3.2222222222E10</td><td>test1233</td><td>test1243</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">tests.RegistrationFormTest#registrationFormTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th></tr><tr class="param stripe"><td>smud</td><td>gasstation</td><td>kabul2123@gmail.com</td><td>9.16579124E9</td><td>12ed12345</td><td>12ed12345</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
