--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\T540p\AppData\Local\Temp\testng-eclipse-124964788\testng-customsuite.xml</span>
+                    <span>C:\Users\user\AppData\Local\Temp\testng-eclipse-1230710732\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,12 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.RegistrationFormTest" class="method navigator-link" hash-for-method="registrationFormTest(hamid, Saremq, hamid@gmail.comq, 3.4444444444E10, 123test3, 123test3)">registrationFormTest(hamid, Saremq, hamid@gmail.comq, 3.4444444444E10, 123test3, 123test3)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.RegistrationFormTest" class="method navigator-link" hash-for-method="registrationFormTest(Jawidq, Ashooryq, jawid@hotmail.comeq, 3.2222222222E10, test1233, test1243)">registrationFormTest(Jawidq, Ashooryq, jawid@hotmail.comeq, 3.2222222222E10, test1233, test1243)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tests.RegistrationFormTest" class="method navigator-link" hash-for-method="registrationFormTest(smud, gasstation, kabul2123@gmail.com, 9.16579124E9, 12ed12345, 12ed12345)">registrationFormTest(smud, gasstation, kabul2123@gmail.com, 9.16579124E9, 12ed12345, 12ed12345)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -131,18 +126,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="registrationFormTest(hamid, Saremq, hamid@gmail.comq, 3.4444444444E10, 123test3, 123test3)">
-                  </a> <!-- registrationFormTest(hamid, Saremq, hamid@gmail.comq, 3.4444444444E10, 123test3, 123test3) -->
+                  <a name="registrationFormTest(smud, gasstation, kabul2123@gmail.com, 9.16579124E9, 12ed12345, 12ed12345)">
+                  </a> <!-- registrationFormTest(smud, gasstation, kabul2123@gmail.com, 9.16579124E9, 12ed12345, 12ed12345) -->
                   <span class="method-name">registrationFormTest</span>
-                  <span class="parameters">(hamid,Saremq,hamid@gmail.comq,3.4444444444E10,123test3,123test3)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="registrationFormTest(Jawidq, Ashooryq, jawid@hotmail.comeq, 3.2222222222E10, test1233, test1243)">
-                  </a> <!-- registrationFormTest(Jawidq, Ashooryq, jawid@hotmail.comeq, 3.2222222222E10, test1233, test1243) -->
-                  <span class="method-name">registrationFormTest</span>
-                  <span class="parameters">(Jawidq,Ashooryq,jawid@hotmail.comeq,3.2222222222E10,test1233,test1243)</span>
+                  <span class="parameters">(smud,gasstation,kabul2123@gmail.com,9.16579124E9,12ed12345,12ed12345)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -150,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\T540p\AppData\Local\Temp\testng-eclipse-124964788\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\user\AppData\Local\Temp\testng-eclipse-1230710732\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -199,20 +186,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'registrationFormTest')
 data.setCell(0, 2, 'tests.RegistrationFormTest')
-data.setCell(0, 3, 4699);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'registrationFormTest')
-data.setCell(1, 2, 'tests.RegistrationFormTest')
-data.setCell(1, 3, 4323);
+data.setCell(0, 3, 5400);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -244,16 +227,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">registrationFormTest(Jawidq, Ashooryq, jawid@hotmail.comeq, 3.2222222222E10, test1233, test1243)</span>
-                <span class="method-start">10014 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">registrationFormTest(hamid, Saremq, hamid@gmail.comq, 3.4444444444E10, 123test3, 123test3)</span>
-                <span class="method-start">14718 ms</span>
+                <span class="method-name">registrationFormTest(smud, gasstation, kabul2123@gmail.com, 9.16579124E9, 12ed12345, 12ed12345)</span>
+                <span class="method-start">9839 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">close</span>
-                <span class="method-start">19048 ms</span>
+                <span class="method-start">15244 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
